# minishogi-position-ranking

./: .gitignore  README.md  pyproject.toml  rank_all.py
minishogi/: __init__.py  minishogi.py  show_images.py
research/: check_king.py  check_piece.py  check_prev.py  check_reach.py  count2i.json  count_fenfile.py  count_valid.py  count_valid2.py  do_par.sh  generate_random1M.py  minishogi  prevNG.txt  random_number_100M.py  random_number_10K.py  rank.py  rank_all.py  rank_exporter.py  rank_to_fen.py  reachNG.txt  reachOK.txt  reach_partial.py  test_pos2rank.py  test_rank.py  test_rank_all.py  test_valid.py
tests/: __init__.py  test_images.py  test_move.py  test_plm.py  test_position.py  test_previous.py
