[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ktanaka", email = "ktanaka@tanaka.ecc.u-tokyo.ac.jp" },
    { name = "sotaro-ici", email = "sotaro-ici@g.ecc.u-tokyo.ac.jp" }
]
dependencies = [
    "pillow>=10.4.0",
    "pytest>=8.3.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python"]
